src/test/ui/proc-macro/derive-still-gated.stderr
error[E0658]: The attribute `derive_Empty` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/derive-still-gated.rs:6:3
   |
LL | #[derive_Empty]
   |   ^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
